--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -33,5 +33,5 @@ jobs:
       run: npm install --global surge
       
     - name: deploy using surge
-      run: surge./ talented-hate.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge./ talented-hate.surge.sh --token ${{secrets.SURGE_TOKEN}}
 .
