--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Bootcamp_Hello_world_example
+name: bootcamp_hello_world_example
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,19 +17,18 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: installing Node
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: 12   
+      # Runs a single command using the runners shell
+      - name: install node js
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
 
-    # Runs a set of commands using the runners shell
-    - name: installing surge
-      run: npm install --global surge
-      
-    - name: deploy using surge
-      run: surge./ talented-hate.surge.sh --token ${{secrets.SURGE_TOKEN}}
-.
+      # Runs a set of commands using the runners shell
+      - name: install surge
+        run: npm install -g surge
+
+      - name: deploy on surge
+        run: surge . ap-bootcamp2020-example.surge.sh --token ${{secrets.SURGE_TOKEN}}
